<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTimerFrame">

    <Button
        android:id="@+id/button"
        android:layout_width="196dp"
        android:layout_height="57dp"
        android:layout_marginTop="168dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/button2"
        android:layout_width="196dp"
        android:layout_height="57dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/bnv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="348dp"
        android:layout_height="168dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleX="1.0"
            android:scaleY="1.2"
            android:textAlignment="center"
            android:theme="@style/NumPick"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="115dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/colon"
            android:textColor="#000000"
            android:textSize="80sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/numberPicker2"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleX="1.0"
            android:scaleY="1.2"
            android:textAlignment="center"
            android:theme="@style/NumPick"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="115dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="218dp"
        android:layout_height="121dp"
        android:text="@string/zeros"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/bnv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:text="@string/stopwatch"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.7" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/design_default_color_surface"
        app:itemIconTint="@drawable/bnv_state"
        app:itemTextColor="@drawable/bnv_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation"
        tools:ignore="InvalidId" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:onClick="onTapEvent"
        app:layout_constraintBottom_toTopOf="@+id/bnv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/ic_baseline_help_24" />


</androidx.constraintlayout.widget.ConstraintLayout>